# dfwinreg

./: .gitignore  .pylintrc  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  MANIFEST.in  MANIFEST.test_data.in  Pipfile  README  README.md  appveyor.yml  dependencies.ini  dfwinreg.ini  pyproject.toml  requirements.txt  run_tests.py  setup.cfg  setup.py  tox.ini
.github/: test_windows.yml
.github/workflows/: lint.yml  test_docker.yml  test_docs.yml  test_tox.yml  test_windows.yml
config/appveyor/: install.ps1
config/dpkg/: changelog  clean  control  copyright  dtfabric-data.dirs  dtfabric-data.install  python-dfwinreg.install  python3-dfwinreg.install  rules
config/pylint/: spelling-private-dict
config/travis/: before_install.sh  install.sh  run_coverage.sh  run_pylint.sh  runtests.sh
dfwinreg/: __init__.py  creg.py  definitions.py  dependencies.py  dtfabric.yaml  errors.py  fake.py  filetime.py  glob2regex.py  interface.py  key_paths.py  py2to3.py  regf.py  registry.py  registry_searcher.py  virtual.py
docs/: conf.py  index.rst
docs/sources/: Code-snippets.md  Supported-formats.md
docs/sources/api/: dfwinreg.rst  modules.rst
docs/sources/developer/: Testing.md  index.rst
docs/sources/user/: Installation-instructions.md  index.rst
tests/: creg.py  decorators.py  dependencies.py  fake.py  filetime.py  glob2regex.py  interface.py  key_paths.py  py2to3.py  regf.py  registry.py  registry_searcher.py  test_lib.py  virtual.py
utils/: check_dependencies.py  common.sh  dependencies.py  pylintrc  review.py  update_dependencies.py  update_release.sh  update_version.sh
