[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dfwinreg"
version = "20260521"
description = "Digital Forensics Windows Registry (dfWinReg)"
maintainers = [
    { name = "Log2Timeline maintainers", email = "log2timeline-maintainers@googlegroups.com" },
]
license = "Apache-2.0"
license-files = ["ACKNOWLEDGEMENTS", "AUTHORS", "LICENSE"]
readme = "README.md"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python",
]
requires-python = ">=3.10"
dependencies = [
    "PyYAML >= 3.10",
    "dfdatetime >= 20160814",
    "dtfabric >= 20170524",
    "libcreg-python >= 20210502",
    "libregf-python >= 20201002",
]

[project.urls]
Documentation = "https://dfwinreg.readthedocs.io/en/latest"
Homepage = "https://github.com/log2timeline/dfwinreg"
Repository = "https://github.com/log2timeline/dfwinreg"

[tool.black]
line-length = 88
target-version = ["py310"]
include = "\\.pyi?$"

[tool.docformatter]
black = true
non-cap = ["bytes:", "dfWinReg", "int:", "str:"]
non-strict = true

[tool.setuptools]
package-dir = {"dfwinreg" = "dfwinreg"}

[tool.setuptools.package-data]
dfwinreg = [
    "*.yaml",
]
