[metadata]
license_files = LICENSE

[sdist]
template = MANIFEST.in
manifest = MANIFEST

[sdist_test_data]
template = MANIFEST.test_data.in
manifest = MANIFEST.test_data

[bdist_rpm]
release = 1
packager = Log2Timeline maintainers <log2timeline-maintainers@googlegroups.com>
doc_files = ACKNOWLEDGEMENTS
            AUTHORS
            LICENSE
            README
build_requires = python3-setuptools
requires = libcreg-python3 >= 20210502
           libregf-python3 >= 20201002
           python3-dfdatetime >= 20160814
           python3-dtfabric >= 20170524
           python3-pyyaml >= 3.10

[bdist_wheel]
universal = 1

