[metadata]
name = dfwinreg
version = 20251014
description = Digital Forensics Windows Registry (dfWinReg).
long_description = dfWinReg, or Digital Forensics Windows Registry, provides read-only access to Windows Registry objects. The goal of dfWinReg is to provide a generic interface for accessing Windows Registry objects that resembles the Registry key hierarchy as seen on a live Windows system.
long_description_content_type = text/plain
url = https://github.com/log2timeline/dfwinreg
maintainer = Log2Timeline maintainers
maintainer_email = log2timeline-maintainers@googlegroups.com
license = Apache License, Version 2.0
license_files =
  ACKNOWLEDGEMENTS
  AUTHORS
  LICENSE
  README
classifiers =
  Development Status :: 3 - Alpha
  Programming Language :: Python

[options]
install_requires = file:requirements.txt
package_dir =
  dfwinreg = dfwinreg
packages = find:
python_requires = >=3.9

[options.package_data]
dfwinreg =
  *.yaml

[options.packages.find]
exclude =
  docs
  tests
  tests.*
  utils
where = .
